--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@nuxtjs/tailwindcss": "^6.7.0",
     "@tailwindcss/typography": "^0.5.9",
     "daisyui": "^2.51.6",
+    "dayjs": "^1.11.7",
     "nuxt-icon": "^0.4.0",
     "typed.js": "^2.0.16"
   }
