--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^18",
     "eslint": "^8.40.0",
     "nuxt": "^3.5.0",
+    "nuxt-vercel-analytics": "^0.2.2",
     "release-it": "^15.10.3"
   },
   "dependencies": {
