--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@nuxt/content": "^2.6.0",
+    "@nuxt/image-edge": "^1.0.0-28059208.2abef1b",
     "@nuxtjs/algolia": "^1.7.0",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/tailwindcss": "^6.7.0",
