--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "devDependencies": {
     "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^18",
+    "@vueuse/core": "^10.1.2",
+    "@vueuse/nuxt": "^10.1.2",
     "eslint": "^8.40.0",
     "nuxt": "^3.5.0",
     "nuxt-vercel-analytics": "^0.2.2",
